--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 resolver = "2"
 members = [
     "newslab-serde",
-    "newslab-serde-range",
+    "newslab-serde-common",
     "newslab-serde-measurements",
     "newslab-serde-nalgebra",
     "newslab-serde-cv",
