--- a/newslab-serde-cv/Cargo.toml
+++ b/newslab-serde-cv/Cargo.toml
@@ -18,3 +18,6 @@ cv-convert = { version = "0.24.1", default-features = false, optional = true }
 [features]
 with-opencv = ["opencv", "cv-convert/opencv_0-84"]
 with-nalgebra = ["nalgebra", "cv-convert/nalgebra_0-32"]
+
+[dev-dependencies]
+serde_json = "1.0.106"
