--- a/newslab-serde-measurements/Cargo.toml
+++ b/newslab-serde-measurements/Cargo.toml
@@ -10,3 +10,6 @@ measurements = "0.11.0"
 nalgebra = "0.32.3"
 num = "0.4.1"
 serde = { version = "1.0.188", features = ["derive"] }
+
+[dev-dependencies]
+serde_json = "1.0.106"
