--- a/newslab-serde-num/Cargo.toml
+++ b/newslab-serde-num/Cargo.toml
@@ -10,3 +10,6 @@ anyhow = "1.0.75"
 gcd = "2.3.0"
 num = "0.4.1"
 serde = { version = "1.0.188", features = ["derive"] }
+
+[dev-dependencies]
+serde_json = "1.0.106"
