--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,13 @@ members = [
     "newslab-serde-cv",
     "newslab-serde-num",
 ]
+
+[workspace.dependencies]
+serde = { version = "1.0.188", features = ["derive"] }
+nalgebra = "0.32.3"
+num = "0.4.1"
+anyhow = "1.0.75"
+measurements = "0.11.0"
+
+# Dev dependencies
+serde_json = "1.0.106"
