--- a/newslab-serde-common/Cargo.toml
+++ b/newslab-serde-common/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = { version = "1.0.188", features = ["derive"] }
+serde = { workspace = true }
 
 [dev-dependencies]
-serde_json = "1.0.106"
+serde_json = { workspace = true }
