--- a/newslab-serde-measurements/Cargo.toml
+++ b/newslab-serde-measurements/Cargo.toml
@@ -6,10 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-measurements = "0.11.0"
-nalgebra = "0.32.3"
-num = "0.4.1"
-serde = { version = "1.0.188", features = ["derive"] }
+measurements = { workspace = true }
+nalgebra = { workspace = true }
+num = { workspace = true }
+serde = { workspace = true }
 
 [dev-dependencies]
-serde_json = "1.0.106"
+serde_json = { workspace = true }
