--- a/newslab-serde-nalgebra/Cargo.toml
+++ b/newslab-serde-nalgebra/Cargo.toml
@@ -6,11 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-measurements = "0.11.0"
-nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
+measurements = { workspace = true }
+nalgebra = { workspace = true, features = ["serde-serialize"] }
 newslab-serde-measurements = { version = "0.1.0", path = "../newslab-serde-measurements" }
-num = "0.4.1"
-serde = { version = "1.0.188", features = ["derive"] }
+num = { workspace = true }
+serde = { workspace = true }
 
 [dev-dependencies]
-serde_json = "1.0.106"
+serde_json = { workspace = true }
