--- a/newslab-serde-num/Cargo.toml
+++ b/newslab-serde-num/Cargo.toml
@@ -6,10 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.75"
+anyhow = { workspace = true }
 gcd = "2.3.0"
-num = "0.4.1"
-serde = { version = "1.0.188", features = ["derive"] }
+num = { workspace = true }
+serde = { workspace = true }
 
 [dev-dependencies]
-serde_json = "1.0.106"
+serde_json = { workspace = true }
