--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ nalgebra = "0.32.3"
 num = "0.4.1"
 anyhow = "1.0.75"
 measurements = "0.11.0"
+cv-convert = { version = "0.26.0", default-features = false }
 
 # Dev dependencies
 serde_json = "1.0.106"
