--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,12 @@ members = [
 
 [workspace.dependencies]
 serde = { version = "1.0.188", features = ["derive"] }
-nalgebra = "0.32.3"
+nalgebra = ">=0.26, <0.33"
 num = "0.4.1"
 anyhow = "1.0.75"
 measurements = "0.11.0"
 cv-convert = { version = "0.26.0", default-features = false }
+opencv = { version = ">=0.63, <0.89", default-features = false }
 
 # Dev dependencies
 serde_json = "1.0.106"
